<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">JourneyApp</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    
    <string name="tab_map_name">Map</string>
    <string name="tab_game_name">Game</string>
    <string name="tab_info_name">Information</string>
    
    <string name="update_headline">Checking for newer journey data</string>
    <string name="update_checkingVersion">Checking for newer data</string>
    <string name="update_downloadingFiles">Downloading new files</string>
    <string name="update_skipButton">Skip</string>

    <string name="game_gotCaught_value">Have you been caught?</string>
    <string name="game_gotCaughtButton">Go to chaser mode</string>
    <string name="game_notGotCaughtButton">Go to runner mode</string>
    <string name="game_startJourneyButton_on">End your journey</string>
    <string name="game_startJourneyButton_off">Start your journey</string>
    <string name="game_othersCaught_intro">I caught </string>
    <string name="game_othersCaught_outro"> others</string>
    
    <string name="checkpoint_description_intro">Details: </string>
    <string name="checkpoint_safezoneDescription_intro">Safe zone: </string>
    <string name="checkpoint_distance">Distance: </string>
    <string name="checkpoint_visited">Visited: </string>
    
    <string name="info_journey_headline">Journey Information</string>
    <string name="info_journeyName_intro">Name</string>
    <string name="info_journeyName_value">Erlangen</string>
    <string name="info_journeyDate_intro">Date</string>
    <string name="info_journeyDate_value">01.23.45 67:89</string>
    <string name="info_journeyLocation_intro">Start location</string>
    <string name="info_journeyLocation_value">HaWo Erlangen</string>
    <string name="info_journeyFurtherInformation_intro">Further information</string>
    <string name="info_journeyFurtherInformation_value">Under no circumstances enter the off limits zone (red bordered area), please.
         Birds nest there on the ground! \nThere will be a party at the HaWo after the Journey. Admittance for journey participants only.</string>
    
    <string name="info_statistics_headline">Statistics</string>
    <string name="info_distance_intro">Distance</string>
    <string name="info_distance_value">0km</string>
    <string name="info_time_intro">Time</string>
    <string name="info_time_value">00:00</string>
    <string name="info_speed_max_intro">Speed (Max)</string>
    <string name="info_speed_max_value">0km/h</string>
    <string name="info_speed_avg_intro">Speed (Avg)</string>
    <string name="info_speed_avg_value">0km/h</string>
    
    <string name="info_settings_headline">Settings</string>
    <string name="info_locationServiceButton_intro">Location updates</string>
    <string name="info_locationServiceButton_value">Send your location to the journey team. This helps organize future journeys and create neat graphics of the course of the game.</string>
    <string name="info_mapFollowingUserButton_intro">Map follows your location</string>
    <string name="info_mapFollowingUserButton_value">Keeps the map centered on your location and disables panning</string>
    <string name="info_resetJourney_intro">Reset journey</string>
    <string name="info_resetJourney_value">This deletes all data and resets the app to first start state</string>
    <string name="info_resetJourneyButton">Reset</string>
    
    <string name="info_system_headline">System</string>
    <string name="info_flattr_intro">Flattr</string>
    <string name="info_flattr_value">If you like this app, please consider flattring it. Click here to do so.</string>
    <string name="info_license_intro">License</string>
    <string name="info_license_value">This app is open-source and licensed under GPL v3 license. Click here to view it.</string>
    <string name="info_acknowledgment_intro">Other people\'s work</string>
    <string name="info_acknowledgement_value">In the making of this app some services, open-source libraries and free graphics were used. Click here to see a list of them and their licenses.</string>
    
    <string name="info_resetConfirmDialoge_title">Please confirm reset</string>
    <string name="info_resetConfirmDialoge_text">Really reset your journey progress? Can not be undone!</string>
    <string name="info_resetConfirmDialoge_ok">Yes</string>
    <string name="info_resetConfirmDialoge_abort">No</string>
    <string name="info_resetConfirmDialoge_stopService">Please end the current journey first in the game tab.</string>
    
    <string name="locationService_name">JourneyApp LocationService</string>
    <string name="locationServerConnectionFailure">Could not connect to the location server</string>
    <string name="noGooglePlayServices">No Google Play Services installed</string>

    <string name="notificationTitle">Location recording is on</string>
    <string name="notificationMessage_sendData">Location is currently sent to the journey team</string>
    <string name="notificationMessage_noData">Your location is kept private. Please consider sharing it.</string>
    
    <string name="safezoneNotificationTitle">You are safe</string>
    <string name="safezoneNotificationText">You have entered a safe zone</string>
</resources>
